# embedding_nomic

./: .gitignore  Embed.cs  Program.cs  Program.cs.old  Program_gguf_duckdb.cs.bk  Program_gguf_simple.cs.bk  Program_onnx_simple.cs.bk  README.md  SimpleTimer.cs  embedding_nomic.csproj  embedding_nomic.slnx
docs/: 001__draft.md  002__notes.md  003__relationship.md  004__relationship_v2.md  004__research_outcome.md  instructions.md  visual_studio_instructions.md
example_code/: build-config.json  embed.py  embed.sh  embedding_config.json  embedding_processor.py  model_loader.py  pyproject.toml  simple_timer.py
