[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentence_transformer_models"
version = "0.1.0"
description = "A Python project"
authors = [
    { name = "Ming Huang" }
]
readme = "README.md"
requires-python = ">=3.11.0"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "sentence-transformers==2.7.0",
    "torch==2.9.0",
    "transformers>=4.38.0",
    "huggingface_hub>=0.20.0",
    "numpy>=1.21.0",
    "pydantic>=2.0.0",
    "tiktoken==0.7.0",
    "duckdb>=0.9.0",
    "pandas>=1.5.0",
    "einops>=0.8.1",
]
# Note: Dependencies are managed by uv add and will be populated here

[project.optional-dependencies]
dev = []  # Will be populated by uv add --dev

[tool.uv]
link-mode = "copy"

[tool.setuptools]
package-dir = { "" = "src" }
packages = []

[tool.ruff]
line-length = 999
target-version = "py313"
fix = true  # Auto-fix issues when possible

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = []

[tool.pytest.ini_options]
testpaths = ["tests", "integration", "functional"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
pythonpath = [".", "src"]
